Add sal-akka-raft serialization assertions
We need to be in control of serialized payload size. This patch adds the
assertions on sizes.

Change-Id: Ic73724d0acc51d7d7f28acb392fe569f719762c9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>